tests/testWorkflows/invalid_workflows/invalidInputWorkflow.playbook
{
    "name": "invalidInputWorkflow",
    "workflows": [
        {
            "actions": [
                {
                    "action_name": "returnPlusOne",
                    "app_name": "HelloWorldBounded",
                    "arguments": [
                        {
                            "name": "number",
                            "value": "abc"
                        }
                    ],
                    "device_id": 1,
                    "id": "0d108ac1-579c-4da7-89e8-b0c08a2232c0",
                    "name": "2"
                },
                {
                    "action_name": "helloWorld",
                    "app_name": "Invalid",
                    "arguments": [],
                    "device_id": 1,
                    "id": "9252885c-8a3b-405c-8b66-a60b5d74733d",
                    "name": "start"
                }
            ],
            "branches": [
                {
                    "destination_id": "0d108ac1-579c-4da7-89e8-b0c08a2232c0",
                    "source_id": "9252885c-8a3b-405c-8b66-a60b5d74733d",
                    "status": "Success"
                }
            ],
            "name": "multiactionWorkflow",
            "start": "9252885c-8a3b-405c-8b66-a60b5d74733d"
        }
    ]
}